fixes benefit header alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ p {
     color: #ffffff;
 }
 
-.h3 {
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
